services/media/resources/jellyfin-external-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin-external
spec:
  parentRefs:
    - name: traefik-external
      namespace: traefik
  hostnames:
    - jellyfin.wildfreddy.fivebytestudios.com
  rules:
    - backendRefs:
        - name: jellyfin
          port: 80
