services/media/resources/jellyfin-ingress-internal.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-internal
  annotations:
    cert-manager.io/cluster-issuer: intranet-ca
spec:
  tls:
    - hosts:
        - "from rules"
      secretName: "jellyfin-internal-tls"
  rules:
    - host: "jellyfin.int.fivebytestudios.com"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  name: http
