services/media/resources/jellyfin-intranet-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin-intranet
spec:
  parentRefs:
    - name: traefik-intranet
      namespace: traefik
  hostnames:
    - jellyfin.int.fivebytestudios.com
  rules:
    - backendRefs:
        - name: jellyfin
          port: 80
